# FireDataForge

./: .gitignore  CITATION.cff  LICENSE  README.md  main.py  plot.py  pyproject.toml  schemas.py
benchmark/: README.md  run_benchmark.py
examples/: fire_spread_demo.py  ml_dataloader.py
firedataforge/: __init__.py  cli.py  config.py  constants.py  events.py  examples.py  io.py  pipeline.py  progress.py  remote_archive.py
firedataforge/sources/: __init__.py  feds.py  frp.py  gee.py  mtbs.py  nifc.py  weather.py  wui.py
validation/: README.md  __init__.py  metrics.py  run_validation.py
